--- a/main_index.css
+++ b/main_index.css
@@ -3,21 +3,27 @@
     text-align: center;
     font-size: 200px;
     color: rgba(148, 187, 233, 1);
-    padding: 100px;
+     padding-bottom: 10vw;
+    padding-left: 2vw;
+    padding-right:2vw;
+    padding-top: 7vw;
     letter-spacing: 2px;
+    margin: 0px;
 }
 
 a {
-    color: pink;
+    color: teal;
     text-decoration: none;
     display: inline;
-    font: bold;
+    font-family: 'Luckiest Guy',cursive;
     text-align: center;
     padding-bottom: 2vw;
     padding-left: 2vw;
     padding-right:2vw;
     padding-top: 2vw;
     font-size: 2vw;
+    margin-top: 60px;
+    margin-bottom: 100vw;
 
 }
 
@@ -29,4 +35,17 @@ html {
     background-color: midnightblue;
 }
 
+.b{
+    display: inline-block;
+   text-align: center;
+    margin-left: 20vw;
+   
+    
+}
 
+.c{
+     display: inline-block;
+    float:right;
+    margin-top: 2vw;
+        margin-right: 32vw;
+}
