--- a/main_index.css
+++ b/main_index.css
@@ -37,8 +37,9 @@ html {
 
 .b{
     display: inline-block;
+    float:left;
    text-align: center;
-    margin-left: 20vw;
+    margin-left: 25vw;
    
     
 }
@@ -46,6 +47,7 @@ html {
 .c{
      display: inline-block;
     float:right;
+    text-align: center;
     margin-top: 2vw;
-        margin-right: 32vw;
+        margin-right: 37vw;
 }
