--- a/main_index.css
+++ b/main_index.css
@@ -36,18 +36,16 @@ html {
 }
 
 .b{
-    display: inline-block;
-    float:left;
+  
+    float:center;
    text-align: center;
-    margin-left: 23vw;
+    margin-bottom: 2vw;
    
-    
 }
 
 .c{
-     display: inline-block;
-    float:right;
-    text-align: center;
-    margin-top: 2vw;
-        margin-right: 37vw;
+   
+    float:center;
+   text-align: center;
+   
 }
