--- a/Photography/main.css
+++ b/Photography/main.css
@@ -121,3 +121,93 @@ html{
     margin-top: 3vw;
   width: 50%;
 }
+
+.centerTwelve{
+        background-attachment: scroll;
+      display: block;
+  margin-left: auto;
+  margin-right: auto;
+     margin-bottom: 3vw;
+    margin-top: 3vw;
+  width: 50%;
+}
+
+.centerThirt{
+    background-attachment: scroll;
+      display: block;
+  margin-left: auto;
+  margin-right: auto;
+     margin-bottom: 3vw;
+    margin-top: 3vw;
+  width: 50%;
+}
+
+.centerFourth{
+    background-attachment: scroll;
+      display: block;
+  margin-left: auto;
+  margin-right: auto;
+     margin-bottom: 3vw;
+    margin-top: 3vw;
+  width: 50%;
+}
+
+.centerFifth{
+    background-attachment: scroll;
+      display: block;
+  margin-left: auto;
+  margin-right: auto;
+     margin-bottom: 3vw;
+    margin-top: 3vw;
+  width: 50%;
+}
+
+.centerSixth{
+    background-attachment: scroll;
+      display: block;
+  margin-left: auto;
+  margin-right: auto;
+     margin-bottom: 3vw;
+    margin-top: 3vw;
+  width: 50%;
+}
+
+.centerSeventh{
+    background-attachment: scroll;
+      display: block;
+  margin-left: auto;
+  margin-right: auto;
+     margin-bottom: 3vw;
+    margin-top: 3vw;
+  width: 50%;
+}
+
+.centerEighth{
+    background-attachment: scroll;
+      display: block;
+  margin-left: auto;
+  margin-right: auto;
+     margin-bottom: 3vw;
+    margin-top: 3vw;
+  width: 50%;
+}
+
+.centerNinth{
+    background-attachment: scroll;
+      display: block;
+  margin-left: auto;
+  margin-right: auto;
+     margin-bottom: 3vw;
+    margin-top: 3vw;
+  width: 50%;
+}
+
+.centerTwenty{
+    background-attachment: scroll;
+      display: block;
+  margin-left: auto;
+  margin-right: auto;
+     margin-bottom: 3vw;
+    margin-top: 3vw;
+  width: 50%;
+}
