--- a/Projects/main.css
+++ b/Projects/main.css
@@ -17,7 +17,10 @@ a {
     color: rgba(148, 187, 233, 1);
     letter-spacing: 2px;
     text-decoration: none;
-  transform: translateY(140%);
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20%;
+    margin-top: 20%;
 
  
 
