--- a/main_index.css
+++ b/main_index.css
@@ -28,10 +28,10 @@ a {
 
 }
 #head:hover {
-    color: lightgoldenrodyellow;
+    color: lightyellow;
 }
 a:hover {
-    color: lightgoldenrodyellow;
+    color: lightyellow;
 }
 
 html {
