--- a/main_index.css
+++ b/main_index.css
@@ -6,9 +6,9 @@
      padding-bottom: 10vw;
     padding-left: 2vw;
     padding-right:2vw;
-    padding-top: 7vw;
+    padding-top: 10vw;
     letter-spacing: 2px;
-    margin: 0px;
+    margin: 0vw;
 }
 
 
