--- a/main_index.css
+++ b/main_index.css
@@ -9,7 +9,7 @@
     padding-top: 10vw;
     letter-spacing: 2px;
     margin: 0vw;
-    margin-top:5px;
+    margin-top:9vw;
 }
 
 
@@ -24,7 +24,7 @@ a {
     padding-right:2vw;
     padding-top: 2vw;
     font-size: 2vw;
-    margin-top: 60px;
+    margin-top: 50px;
     margin-bottom: 100vw;
 
 }
