--- a/main_index.css
+++ b/main_index.css
@@ -3,13 +3,13 @@
     text-align: center;
     font-size: 200px;
     color: #FFFF65;
-     padding-bottom: 2vw;
+     padding-bottom: 6vw;
     padding-left: 2vw;
     padding-right:2vw;
     padding-top: 15vw;
     letter-spacing: 2.5px;
     margin: 0vw;
-    margin-top:10vw;
+    margin-top:5px;
 }
 
 
