--- a/main_index.css
+++ b/main_index.css
@@ -3,7 +3,7 @@
     text-align: center;
     font-size: 200px;
     color: #FFFF65;
-     padding-bottom: 6vw;
+     padding-bottom: 10vw;
     padding-left: 2vw;
     padding-right:2vw;
     padding-top: 6vw;
@@ -23,8 +23,7 @@ a {
     padding-right:2vw;
     padding-top: 2vw;
     font-size: 2vw;
-    margin-top: 15px;
-    
+    margin: 0px;    
 
 }
 #head:hover {
