--- a/main_index.css
+++ b/main_index.css
@@ -1,7 +1,7 @@
 #head {
     font-family: 'Luckiest Guy', cursive;
     text-align: center;
-    font-size: 200px;
+    font-size: 15vw;
     color: #FFFF65;
      padding-bottom: 8vw;
     padding-left: 2vw;
