--- a/Projects/Photography/main.css
+++ b/Projects/Photography/main.css
@@ -1,9 +1,15 @@
 .centerOne{
   display: grid;
-    margin-left: auto;
-    margin-right: auto;
+    float: center;
+    margin-left: 0;
+    margin-right: 0;
     margin-top: 150px;
 }
 a{
     display: grid;
+    float: left;
+    margin-bottom: 0;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
 }
