--- a/Projects/Photography/main.css
+++ b/Projects/Photography/main.css
@@ -5,11 +5,12 @@
     margin-right: 0;
     margin-top: 150px;
 }
-a{
+.buttonRight{
     display: inline-block;
     float: right;
     margin-bottom: 0;
     margin-top: 0;
     margin-left: 0;
     margin-right: 0;
+    padding: 10px;
 }
