--- a/Projects/Photography/main.css
+++ b/Projects/Photography/main.css
@@ -9,7 +9,7 @@
     display: inline-block;
     float: right;
     margin-bottom: 0;
-    margin-top: 0;
+    margin-top: 250px;
     margin-left: 0;
     margin-right: 0;
     padding: 10px;
