--- a/Projects/Photography/main.css
+++ b/Projects/Photography/main.css
@@ -1,15 +1,15 @@
 .centerOne{
   display: inline-block;
     float: center;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 150px;
 }
 .buttonRight{
     display: inline-block;
     float: right;
     margin-bottom: 0;
-    margin-top: 250px;
+    margin-top: 310px;
     margin-left: 0;
     margin-right: 0;
     padding: 10px;
