--- a/Projects/Photography/main.css
+++ b/Projects/Photography/main.css
@@ -14,3 +14,14 @@
     margin-right: 0;
     padding: 10px;
 }
+.buttonLeft{
+    display: inline-block;
+    float: left;
+    margin-bottom: 0;
+    margin-top: 310px;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 10px;
+}
+
+
