--- a/Projects/Photography/main.css
+++ b/Projects/Photography/main.css
@@ -1,7 +1,7 @@
 .centerOne{
   display: inline-block;
     float: inherit;
-    margin-left: auto;
+    margin-left: 80px;
     margin-right: auto;
     margin-top: 150px;
 }
