--- a/Projects/Photography/main.css
+++ b/Projects/Photography/main.css
@@ -1,7 +1,7 @@
 .centerOne{
   display: inline-block;
     float: inherit;
-    margin-left: 2vw;
+    margin-left: 60px;
     margin-right: auto;
     margin-top: 150px;
 }
@@ -12,7 +12,7 @@
     margin-top: 310px;
     margin-left: auto;
     margin-right: auto;
-    padding: 2vw;
+    padding: 10px;
 }
 .buttonLeft{
     display: inline-block;
@@ -21,7 +21,7 @@
     margin-top: 310px;
     margin-left: auto;
     margin-right: auto;
-    padding: 2vw;
+    padding: 10px;
 }
 
 
