--- a/Projects/main.css
+++ b/Projects/main.css
@@ -3,7 +3,7 @@ a {
     display: block;
     text-align: center;
     font-size: 3vw;
-    margin-top: 4.5vw;
+    margin-top: 2vw;
     color: rgba(148, 187, 233, 1);
     letter-spacing: 2px;
     text-decoration: none;
@@ -19,7 +19,8 @@ a {
     text-decoration: none;
     margin-left: auto;
     margin-right: auto;
-    
+    margin-bottom: 20%;
+    margin-top: 25%;
 
  
 
