--- a/Processing/main.css
+++ b/Processing/main.css
@@ -1,5 +1,25 @@
 .centerOne{
-margin-left: auto;
-margin-right: auto;
-padding: 0;
+  display: inline-block;
+    float: inherit;
+    margin-left: 55px;
+    margin-right: auto;
+    margin-top: 150px;
+}
+.buttonRight{
+    display: inline-block;
+    float: right;
+    margin-bottom: auto;
+    margin-top: 320px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+}
+.buttonLeft{
+    display: inline-block;
+    float: left;
+    margin-bottom: auto;
+    margin-top: 320px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
 }
