--- a/Poem_Activity/main.css
+++ b/Poem_Activity/main.css
@@ -22,7 +22,8 @@
 .svg{
     display: inline-grid;
     margin-top: -150px;
-    margin-bottom: -8px
+    margin-bottom: -7px;
+    margin-left: 40px;
   
    
   
