--- a/Projects/Design/main_2.css
+++ b/Projects/Design/main_2.css
@@ -1,4 +1,7 @@
 a{
-    margin-left: 400px;
-    margin-top: 300px;
+    text-decoration: none;
+    margin-left: 200px;
+    margin-top: 30px;
+    color: white;
+    font-size: 40px;
 }
