--- a/Clock/main.css
+++ b/Clock/main.css
@@ -3,6 +3,7 @@ a{
     text-decoration: none;
     color: white;
     font-size: 70px;
-    margin-top:600px;
+    margin-top:700px;
+    margin-left: 100px;
 
 }
